exports[`landscape`] = `
<div
  className="">
  <div
    style={
      Object {
        "color": "DARKGRAY",
        "fontFamily": "Roboto Condensed, Sans Serif",
        "fontSize": "16px",
        "left": "0",
        "marginLeft": "20px",
        "marginTop": "10px",
        "position": "absolute",
        "textTransform": "capitalize",
        "top": "0",
      }
    }>
    A4 
    landscape
     preview
  </div>
  <div
    style={
      Object {
        "border": "1px dashed GAINSBORO",
        "height": "210mm",
        "margin": "40px 20px 20px 20px",
        "width": "297mm",
      }
    }>
    <div
      style={
        Object {
          "backgroundColor": "THISTLE",
          "height": "100%",
        }
      } />
  </div>
</div>
`;

exports[`portrait`] = `
<div
  className="">
  <div
    style={
      Object {
        "color": "DARKGRAY",
        "fontFamily": "Roboto Condensed, Sans Serif",
        "fontSize": "16px",
        "left": "0",
        "marginLeft": "20px",
        "marginTop": "10px",
        "position": "absolute",
        "textTransform": "capitalize",
        "top": "0",
      }
    }>
    A4 
    portrait
     preview
  </div>
  <div
    style={
      Object {
        "border": "1px dashed GAINSBORO",
        "height": "297mm",
        "margin": "40px 20px 20px 20px",
        "width": "210mm",
      }
    }>
    <div
      style={
        Object {
          "backgroundColor": "MEDIUMAQUAMARINE",
          "height": "100%",
        }
      } />
  </div>
</div>
`;
